logos/index_files/stylesheet.css
@media screen and (max-width: 600px) {
    .main {
        padding: 15px 20px;
    }
}

.div {
    display: block;
}

.resume {
    height: 100vh;
    padding: 0 40px;
    margin-top: 50px;
}

.contact {
    padding: 0 40px;
    margin: 50px;
}

p {
    margin-bottom: 25px;
}


/*-------------------Navigation-------------------*/

.nav-wrapper li {
    color: slateblue;
}

.intro {
    height: 100vh;
    z-index: 5;
}


/*-------ABOUT-----------*/

.portrait {
    text-align: center;
}

.imgportrait {
    max-width: 200px;
}

section {
    min-height: 100vh;
    padding: 40px 60px;
}


/*-------SKILLS-----------*/

.logo {
    max-height: 50px;
    margin-top: 25px;
}

.rectangle {
    max-height: 60px;
}


/*--------WORKSAMPLE CARDS----------*/

.row {
    width: 100%;
}

.card {
    border: 6px solid black;
}


/*--------CONTACT----------*/

.socialmedia,
.far,
.fab {
    font-size: 30px;
}

.contact {
    text-align: center;
}

.contact a {
    padding: 10px;
    color: #FA7268;
}

.contact a:hover {
    padding: 10px;
    color: orangered;
}


/* --------ARTWORK-------- */

.workcontainer {
    justify-content: center;
}

.dadpranks h4 {
    padding: 40px;
}

.artworkembed {
    max-width: 100%;
    text-align: center;
}

.sectioncolumn {
    flex-direction: column;
}

.sectioncolumn h2 {
    text-align: left;
}

.sectionheader {
    display: flex;
    justify-content: space-between;
}

